# OpenGL-Duck

./: CMakeLists.txt  README.md  Renderer.cpp  Renderer.h
config/: config.ini
include/: Camera.h  DuckMovement.h  Mesh.h  shaderloader.h
include/Mesh/: Mesh.h  MeshLoader.h
res/shaders/: basicFragmentShader.txt  basicVertexShader.txt  billboard.fs  billboard.vs  color.fs  fisheye.vs  glass.fs  glass.vs  lightColorFragmentShader.fs  standardVertexShader.vs  waterReflectionFragmentShader.fs  waterReflectionVertexShader.vs
src/: DuckMovement.cpp  Mesh.cpp  MeshLoader.cpp  main.cpp
src/Mesh/: Mesh.cpp  MeshLoader.cpp
